--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,4 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+@media only screen and (max-width: 767px) {
+  body {
+    background-image: url(imgs/aceleradora.jpg);
+  }
+}
 body {
 	/* Ubicacion de la imagen */
 	background-image: url(imgs/working.jpg);
@@ -22,35 +27,27 @@ body {
 	background-color: #464646;
 
 	/* ---------------------------------------------------------- */
-	font-size: 0;
-	font-family: 'Source Sans Pro', sans-serif;
-	margin: 0;
-	padding: 0;
+	display: flex;
+    min-height: 100vh;
+    margin: 0;
+    font-family: 'Source Sans Pro';
 }
-h1{
-	font-size: 36px;
-	text-align: center;
-	margin: 0, auto;
+div {
+	margin: auto;
+	text-align:center;
 }
-.boton {
-	background: transparent;
-	background-color: #f1c40f;
-	border: 0;
-	border: 2px solid #fef9e7;
-	border-radius: 4px;
-	color: #fef9e7;
-	cursor: pointer;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
-	margin-top: 20px;
-	margin: 0 8px;
-	padding: 6px 14px;
-	text-align: center;
-	vertical-align: middle;
-	transition: all 0.5s;
+h1 {
+	margin: 20px auto;
+    font-size: 60px;
+    color: #48A2DD;
 }
-@media only screen and (max-width: 767px) {
-  body {
-    background-image: url(imgs/aceleradora.jpg);
-  }
+a {
+	margin: 10px auto;
+	text-decoration: none;
+    border: 2px solid #5fa9c5;
+    padding: 10px;
+    /*width: 200px;*/
+    border-radius: 5px;
+    color: #5fa9c5;
+    font-size: 24px
 }
